@@ -98,4 +98,4 @@
 96, 96, 3
 97, 97, 2
 98, 98, 1
-99, 99, 0
+99,   , 0
